# -_-_-_2025

ф_прогр_лаб1/: cabal.project  cabal.project.local  display-schedule.cabal  schema.sql  Безкровна_Haskell_1.docx
ф_прогр_лаб1/app/: Main.hs
ф_прогр_лаб2/: parallel-shortest-path.cabal  Безкровна_хаскель 2.docx
ф_прогр_лаб2/app/: Main.hs
ф_прогр_лаб2/data/: sample.graph
ф_прогр_лаб2/src/: Graph.hs  ParallelBellmanFord.hs
ф_прогр_лаб3/: Безкровна_lab3_хаскелб.docx
ф_прогр_лаб3/fp3dasha/: input.txt  lab3.cabal
ф_прогр_лаб3/fp3dasha/app/: Main.hs
ф_прогр_лаб3/fp3dasha/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
