cabal-version:      2.4
name:               parallel-shortest-path
version:            0.1.0.0
synopsis:           Parallel shortest path (weighted graph) in Haskell using -threaded
category:           Education
build-type:         Simple

executable parallel-shortest-path
  main-is:          Main.hs
  hs-source-dirs:   app, src
  default-language: Haskell2010

  build-depends:
      base >= 4.18 && < 4.20
    , async >= 2.2 && < 2.3
    , vector >= 0.13 && < 0.14
    , random >= 1.2 && < 1.3
    , time >= 1.12 && < 1.14

  ghc-options:
      -O2
      -Wall
      -threaded
      -rtsopts
      -with-rtsopts=-N
